force-app/main/default/objects/BET_BDD_Country_vs_States__c/BET_BDD_Country_vs_States__c.object-meta.xml
<CustomObject>
    <description>This Object Stores list of BDD countries and state records.</description>
    <label>BDD State</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BDD States</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>