force-app/main/default/objects/BET_BDD_Country_vs_States__c/fields/Enable_for_MDN__c.field-meta.xml
<CustomField>
    <fullName>Enable_for_MDN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable for MDN</label>
    <type>Checkbox</type>
</CustomField>