force-app/main/default/objects/BET_BDD_Country_vs_States__c/fields/Mapping_Code__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Code__c</fullName>
    <label>Mapping Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>