force-app/main/default/objects/BET_BDD_Country_vs_States__c/recordTypes/State.recordType-meta.xml
<RecordType>
    <fullName>State</fullName>
    <active>true</active>
    <label>State</label>
</RecordType>